--- a/admin/daily-standups/01-28-2021.MD
+++ b/admin/daily-standups/01-28-2021.MD
@@ -4,4 +4,6 @@ Ahmad Milad: Interface design - Ahmad Milad - Not Completed
 
 Marco Kuan: I have not done anything today :slightly_smiling_face:
 
-Alexis Chen: Haven’t done anything today either lol,  got a midterm and few assignments due today
+Alexis Chen: Haven’t done anything today either lol, got a midterm and few assignments due today
+
+Rohan Patel: Nothing
