--- a/admin/daily-standups/01-31-2021.MD
+++ b/admin/daily-standups/01-31-2021.MD
@@ -9,3 +9,5 @@ Alexis Chen: Nothing
 Jessie Zou: Nothing :notlikethis:
 
 Miaoqiu Sun: nothing, planning on working on interface design tmr
+
+Rohan Patel: Nothing
