--- a/admin/daily-standups/02-04-2021.MD
+++ b/admin/daily-standups/02-04-2021.MD
@@ -7,3 +7,7 @@ Jessie Zou: Worked on the roadmap. Also went over some PRs
 Alexis Chen: went over one PR
 
 Kevin Jang: Made some psychedelic art in CSE 130
+
+Miaoqiu Sun: Nothing
+
+Rohan Patel: Nothing
