--- a/admin/daily-standups/02-05-2021.MD
+++ b/admin/daily-standups/02-05-2021.MD
@@ -1,3 +1,11 @@
 Marco Kuan: What did we do today? :wink:
 
 Marco Kuan: @Rohan Patel and I added the time control functions (work, small break, and big break), skip (bug), added html functions for debugging.
+
+Jessie Zou: Nothing
+
+Alexis Chen: nothing
+
+Miaoqiu Sun: Nothing
+
+Rohan Patel: Nothing
