--- a/admin/daily-standups/02-07-2021.MD
+++ b/admin/daily-standups/02-07-2021.MD
@@ -11,3 +11,11 @@ Kevin Jang: It is hard defining functions because there are a lot of steps to do
 I think it would be easier using the Haskell IDE but my computer can't support it so I'm kinda doing the hw blind
 
 Marco Kuan: Oh rip :disappointed:. good luck on it :open_mouth:.
+
+Jessie Zou: Nothing
+
+Alexis Chen: nothing
+
+Miaoqiu Sun: Nothing
+
+Rohan Patel: Nothing
