--- a/admin/daily-standups/02-09-2021.MD
+++ b/admin/daily-standups/02-09-2021.MD
@@ -1,3 +1,13 @@
 Marco Kuan: What did we do today?
 
 Elizabeth Cho: CI/CD pipeline phase 1 complete!?
+
+Jessie Zou: Nothing
+
+Marco Kuan: Nothing
+
+Alexis Chen: nothing
+
+Miaoqiu Sun: Nothing
+
+Rohan Patel: Nothing
