--- a/admin/daily-standups/02-10-2021.MD
+++ b/admin/daily-standups/02-10-2021.MD
@@ -10,3 +10,11 @@ Kevin Jang: Dude I couldn't figure out what was wrong with storing in local stor
 Marco Kuan: yeah haha
 
 Alexis Chen: nothing
+
+Jessie Zou: Nothing
+
+Elizabeth Cho: Nothing
+
+Miaoqiu Sun: Nothing
+
+Rohan Patel: Nothing
