--- a/admin/daily-standups/02-11-2021.MD
+++ b/admin/daily-standups/02-11-2021.MD
@@ -3,3 +3,13 @@ Marco Kuan: What did we do today?
 Jessie Zou: Nothing
 
 Alexis Chen: Preping for cse101 mid tmr :notlikethis::crossed_fingers:
+
+Jessie Zou: #miles gang
+
+Elizabeth Cho: Nothing
+
+Marco Kuan: Nothing
+
+Miaoqiu Sun: Nothing
+
+Rohan Patel: nothing
