--- a/admin/daily-standups/02-03-2021.MD
+++ b/admin/daily-standups/02-03-2021.MD
@@ -12,12 +12,18 @@ Marco Kuan: That's pretty good lol
 
 Kevin Jang: Ye it's at the rate of 1 problem a day
 
-Ahmad Milad: With my partner @Miaoqiu Sun  we worked on the dark mode feature for the webpage. We will place a pull request as soon as we both approve the final version.
+Ahmad Milad: With my partner @Miaoqiu Sun we worked on the dark mode feature for the webpage. We will place a pull request as soon as we both approve the final version.
 
-Kevin Jang: big sad I thought the midterm said forward edges only, not forward and tree edges :sob: (edited) 
+Kevin Jang: big sad I thought the midterm said forward edges only, not forward and tree edges :sob: (edited)
 
 Alexis Chen: Nothing today
 
 Marco Kuan: @Kevin Jang don't worry, it's getting regraded :feelsokayman:
 
 Elizabeth Cho: Still midterm stuff unfortunately
+
+Jessie Zou: Nothing
+
+Miaoqiu Sun: Same as Ahmad
+
+Rohan Patel: Nothing
