--- a/admin/daily-standups/02-06-2021.MD
+++ b/admin/daily-standups/02-06-2021.MD
@@ -6,3 +6,9 @@ Jessie Zou: I did nuttin
 
 Kevin Jang: The MVP pitch is done and I don't feel like adding onto the extended one for Sunday
 CSE 130 midterm studying is ???? how is this 2048???
+
+Alexis Chen: nothing
+
+Miaoqiu Sun: Nothing
+
+Rohan Patel: Nothing
