--- a/admin/daily-standups/02-08-2021.MD
+++ b/admin/daily-standups/02-08-2021.MD
@@ -5,3 +5,9 @@ Elizabeth Cho: Working on CI/CD setup
 Marco Kuan: I did nothing
 
 Alexis Chen: i did nothing
+
+Jessie Zou: Nothing
+
+Miaoqiu Sun: Nothing
+
+Rohan Patel: Nothing
