--- a/admin/daily-standups/03-05-2021.MD
+++ b/admin/daily-standups/03-05-2021.MD
@@ -11,3 +11,7 @@ Marco Kuan: Nothing
 Kevin Jang: Local storage on tasks took like 15 min to do lol
 
 Miaoqiu Sun: nothing
+
+Elizabeth Cho: Jest tests
+
+Alexis Chen: nothing
