--- a/admin/daily-standups/03-09-2021.MD
+++ b/admin/daily-standups/03-09-2021.MD
@@ -28,3 +28,5 @@ Marco Kuan: Going to update standups, but I believe the start button was fixed?
 The image I attached is what I believe Alexis fixed?
 
 Rohan Patel: I hid the potatoes from the other themes, I don't plan on submitting a PR until I create the congrats screen
+
+Elizabeth Cho: ADRs and Jest branch are committed/PRed
