--- a/admin/daily-standups/01-27-2021.MD
+++ b/admin/daily-standups/01-27-2021.MD
@@ -1,1 +1,7 @@
 Marco Kuan: @everyone Make sure to respond to what your roles are if you haven't already^. Thank you!
+
+Jessie Zou: Nothing
+
+Alexis Chen: nothing
+
+Marco Kuan: nothing :slightly_smiling_face:
