--- a/admin/daily-standups/01-30-2021.MD
+++ b/admin/daily-standups/01-30-2021.MD
@@ -9,3 +9,5 @@ Rohan Patel: I pushed a basic pomo-timer to the repo (no html or css) and just t
 Marco Kuan: @Rohan Patel and I have pushed an update where we added javadocs to the app.js and we updated the C4 diagram.
 
 Kevin Jang: Keep the diagrams coming for the pitch writeup xD
+
+Jessie Zou: Nothin
