--- a/admin/daily-standups/03-01-2021.MD
+++ b/admin/daily-standups/03-01-2021.MD
@@ -15,3 +15,5 @@ Elizabeth Cho: Did some Korean stuff, working on e2e testing
 Miaoqiu Sun: fixed alignment and spacing issue
 
 Alexis Chen: created issues
+
+Rohan Patel: nothing
