--- a/admin/daily-standups/03-08-2021.MD
+++ b/admin/daily-standups/03-08-2021.MD
@@ -16,3 +16,7 @@ Miaoqiu Sun: I have not fixed text overflow, but had some other css fixes done
 Alexis Chen: Fixing the overflow rn will push it today
 
 Rohan Patel: made C4 diagrams, will replace start with reset and create the congrats screen on wednesday
+
+Jessie Zou: I did write a document yes!
+
+Jessie Zou: Nothin
