--- a/admin/daily-standups/03-09-2021.MD
+++ b/admin/daily-standups/03-09-2021.MD
@@ -30,3 +30,7 @@ The image I attached is what I believe Alexis fixed?
 Rohan Patel: I hid the potatoes from the other themes, I don't plan on submitting a PR until I create the congrats screen
 
 Elizabeth Cho: ADRs and Jest branch are committed/PRed
+
+Miaoqiu Sun: nothing
+
+Jessie Zou: Things are going well Marco. Hope your days going well
