--- a/admin/daily-standups/03-10-2021.MD
+++ b/admin/daily-standups/03-10-2021.MD
@@ -18,3 +18,5 @@ Kevin Jang: Not really. I ended up doing a bunch of other people's frontend stuf
 Miaoqiu Sun: Spanish mode features done
 
 Alexis Chen: Think Rohan got it working. I will try to find some audio that fits better. Made a few changes on the cssFinal branch (edited)
+
+Rohan Patel: Congrats screen was finished earlier this week
