--- a/admin/daily-standups/03-12-2021.MD
+++ b/admin/daily-standups/03-12-2021.MD
@@ -19,3 +19,7 @@ Marco Kuan: I'll edit it then!
 Jessie Zou: I'm going to ask everyone individually to record some clips this weekend!
 
 Marco Kuan: I have done nothing, but I am going to go full godmode Saturday
+
+Alexis Chen: Rohan finished the local storage. I fixed some bugs with volume
+
+Rohan Patel: I finished localstorage and helped kevin a little bit (edited)
